<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/appbar_back"
        android:gravity="center"
        android:textAlignment="center"
        android:theme="?actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="@color/black">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="false">

            <TextView
                android:id="@+id/tg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:fontFamily="@font/bold"
                android:text="@string/tt"
                android:textColor="#0D0E10"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="false">

            <TextView
                android:id="@+id/mn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/mm"
                android:fontFamily="@font/bold"
                android:textColor="#060817"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="false">

            <TextView
                android:id="@+id/mz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/far"
                android:fontFamily="@font/bold"
                android:textColor="#030619"
                android:textSize="@dimen/_23sdp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_150sdp"
        android:contentDescription="image"
        android:src="@drawable/pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom"
        android:fontFamily="@font/bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>